--- a/Tilings.html
+++ b/Tilings.html
@@ -4,9 +4,10 @@
 	<script>
         let RegularTile = class
 		{
-  		constructor(name, color, number_of_sides, desired_angle, neighbors)
+  		constructor(name,parent, color, number_of_sides, desired_angle, neighbors)
 			{
     		this.name = name;
+    		this.parent = parent;
     		this.color = color;
     		this.number_of_sides = number_of_sides;
     		this.angle = desired_angle;
@@ -26,59 +27,59 @@
 			    var new_radii = get_shape_radii(sidelength, this.number_of_sides);
 			    var new_coords = add_directional_vector(coords, this.angle, old_radii[0]+new_radii[0]);
 			    shape_angle = get_modified_shape_angle(this.angle, this.number_of_sides);
-				return {"x":new_coords[0], "y":new_coords[1], "radius":new_radii[1], "angle":shape_angle};
+				return {"x":new_coords[0], "y":new_coords[1], "radius":new_radii[1], "angle":shape_angle, "sides":this.number_of_sides, "color":this.color};
 			}
 			else
 			{
 			    shape_angle = get_modified_shape_angle(this.angle, number_of_sides_current);
-			    return {"x":coords[0], "y":coords[1],"radius":old_radii[1], "angle":shape_angle};
+			    return {"x":coords[0], "y":coords[1],"radius":old_radii[1], "angle":shape_angle, "sides":this.number_of_sides, "color":this.color};
 			}
 		}
 		};
 
-		function get_inner_radius(radius, sidelength)
-        {
-            return Math.sqrt((radius * radius) - (sidelength * sidelength / 4))
-        }
-
-        function sidelength_to_outer_radius(sidelength, number_of_sides)
+		function get_outer_radius(sidelength, number_of_sides)
         {
             return sidelength / (2 * Math.sin(Math.PI / number_of_sides))
         }
 
+        function get_inner_radius(radius, sidelength)
+        {
+            /* Gets the inner radius(center to sides) of a regular polygon using pythagorean theorem*/
+            return Math.sqrt((radius * radius) - (sidelength * sidelength / 4))
+        }
+
         function get_shape_radii(sidelength, number_of_sides)
 		{
-		    var outer_radius = sidelength_to_outer_radius(sidelength, number_of_sides);
+		    /* 	Get both the inner and outer radii of a regular polygon
+		     	First use the sidelength and number of sides to get the outer radius
+		     	Then use the outer radius and sidelength to get the inner radius	*/
+		    var outer_radius = get_outer_radius(sidelength, number_of_sides);
             var inner_radius = get_inner_radius(outer_radius, sidelength);
             return [inner_radius, outer_radius]
 		}
 
         function polar_to_cartesian(direction, magnitude) {
-            <!-- creates an x,y vector given a direction(degrees) and a magnitude-->
+            /* creates an x,y vector given a direction(degrees) and a magnitude */
             var dir = direction
             var x = magnitude * Math.cos((dir / 360) * 2 * Math.PI)
             var y = magnitude * Math.sin((dir / 360) * 2 * Math.PI)
             return [x, y]
         }
 
-        function angle_trunc(a)
-        {
-            <!-- helper function for point_direction-->
-            while (a < 0.0)
-                a += math.pi * 2
-            return a
-        }
-
         function point_direction(coord1, coord2) {
             <!-- returns the angle in degrees from two coordinates -->
             var dy = coord2[1] - coord1[1]
             var dx = coord2[0] - coord1[0]
-            return angle_trunc(Math.atan2(dy, dx)) * 180 / Math.PI
+			var a = Math.atan2(dy, dx);
+            while (a < 0.0)
+                a += math.pi * 2;
+
+            return a * 180 / Math.PI
         }
 
         function add_directional_vector(coords, direction, magnitude)
         {
-            <!--Takes [x,y] adds a vector to it and returns the new [x,y]-->
+            /* Takes [x,y] adds a vector to it and returns the new [x,y] */
             var vector = polar_to_cartesian(direction,magnitude)
             return [coords[0] + vector[0], coords[1] + vector[1]]
         }
@@ -89,8 +90,10 @@
 		    return direction + ((number_of_sides % 2) == 0 ? (360 / (number_of_sides * 2)) : 0)
 		}
 
-		function create_canvas_shapes(canvas, starting_coords, sidelength, shapes)
+		function generate_initial_chunk_data(sidelength, shapes)
 		{
+		    var chunk_data = {};
+
 		    /* Generates shapes from a list and adds them to canvas */
 			var current_number_of_sides;
 			if (shapes.length > 0)
@@ -98,44 +101,57 @@
 			    var current_number_of_sides = shapes[0].number_of_sides;
 
 				/* Generate values of first shape in the sequence */
-			    var polygon_values = shapes[0].generate_shape_values(starting_coords, sidelength, current_number_of_sides, true);
+			    var polygon_values = shapes[0].generate_shape_values([0,0], sidelength, current_number_of_sides, true);
 
-				polygon = new createjs.Shape();
-			    polygon.graphics.beginFill(shapes[0].color).drawPolyStar(polygon_values["x"], polygon_values["y"], polygon_values["radius"], shapes[0].number_of_sides, 0, polygon_values["angle"]);
-                canvas.addChild(polygon);
-
-                current_coordinates = [polygon_values["x"],polygon_values["y"]];
+			    /* add rendering data to chunk */
+			    chunk_data[shapes[0].name] = polygon_values;
 
                 for (var i = 1; i < shapes.length; i++)
 				{
-				    /* Feed latest coordinates and number of sides back into function*/
-				    polygon_values = shapes[i].generate_shape_values([polygon_values["x"],polygon_values["y"]], sidelength, current_number_of_sides, false);
-				    current_number_of_sides = shapes[i].number_of_sides;
+				    /* Feed coordinates and number of sides of the parent of current shape back into function*/
+					var parent = shapes[i].parent;
 
-					polygon = new createjs.Shape();
-					polygon.graphics.beginFill(shapes[i].color).drawPolyStar(polygon_values["x"], polygon_values["y"], polygon_values["radius"], shapes[i].number_of_sides, 0, polygon_values["angle"]);
-					canvas.addChild(polygon);
+					var coords = [chunk_data[parent]["x"]	, chunk_data[parent]["y"]]
+					current_number_of_sides = chunk_data[parent]["sides"];
 
+				    polygon_values = shapes[i].generate_shape_values(coords, sidelength, current_number_of_sides, false);
+
+				    /* add rendering data to chunk */
+				    chunk_data[shapes[i].name] = polygon_values;
 				}
 
-				canvas.update();
+			return chunk_data;
 			}
+		}
+
+		function render_chunk(xoffset, yoffset, canvas, chunk_data)
+		{
+		for (var [name, shape] of Object.entries(chunk_data))
+			{
+			    polygon = new createjs.Shape();
+				polygon.graphics.beginFill(shape["color"]).drawPolyStar(shape["x"]+xoffset, shape["y"]+yoffset, shape["radius"], shape["sides"], 0, shape["angle"]);
+				canvas.addChild(polygon);
+			}
+		    canvas.update()
 		}
 
 		function init()
 		{
-            var sidelength = 10;
+            var sidelength = 20;
 			var stage = new createjs.Stage("demoCanvas");
 
-			shape_data_1 = [
-			    new RegularTile("A", "blue", 4, 0, []),
-				new RegularTile("B", "green", 4, 0, []),
-				new RegularTile("C", "red", 4, 0, []),
-				new RegularTile("D", "blue", 4, 0, []),
-				new RegularTile("E", "green", 4, 0, []),
-				new RegularTile("F", "red", 4, 0, []),
-				new RegularTile("G", "blue", 4, 90, []),
-			]
+			/* shape("name","color",sides, angle, neighbors=[]) */
+			shape_data = [
+			    new RegularTile("A",null, "blue", 6, 0, []),
+				new RegularTile("B","A", "green", 4, 0, []),
+				new RegularTile("C","B", "red", 6, 0, []),
+				new RegularTile("D","C", "blue", 4, 0, []),
+				new RegularTile("E","C", "green", 4, 240, []),
+				new RegularTile("F","E", "red", 4, 240, []),
+				new RegularTile("G","B", "blue", 4, 90, []),
+			];
+
+			chunk_data = generate_initial_chunk_data(sidelength, shape_data);
 
 			chunk_height = 95;
 			chunk_vertical_count = 1;
@@ -149,7 +165,7 @@
 			{
 			    for(var j = 0; j < chunk_horizontal_count; j++)
 				{
-				    create_canvas_shapes(stage,[x,y], sidelength, shape_data_1);
+				    render_chunk(x,y,stage, chunk_data);
 				    x += chunk_width;
 				}
 				y += chunk_height;
