Added index page with redirect

--- a/Tilings.html
+++ b/Tilings.html
@@ -7,6 +7,7 @@
 </head>
 <body onload="init();">
 
+<div>
 	<div>
 		<button id="squaregrid">Checkerboard</button>
 		<button id="triangles">Triangles</button>
@@ -47,5 +48,5 @@ Chunk rendering data will be output here. Copy and paste and use it for your own
 	<script>
 		addButtonEvents();
 	</script>
-
+</div>
 </body></html>
